--- a/accounting-reporting/src/Letterhead.jrxml
+++ b/accounting-reporting/src/Letterhead.jrxml
@@ -73,62 +73,62 @@
 			<textField>
 				<reportElement style="INVOICE_TX_08" isPrintRepeatedValues="false" x="70" y="2" width="175" height="13" uuid="04f9cccb-d22b-44d8-800b-9bba9052dca6"/>
 				<textElement textAlignment="Left"/>
-				<textFieldExpression><![CDATA[${wrapper}.getUserBankName()]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{wrapper}.getUserBankName()]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="INVOICE_TX_08" isPrintRepeatedValues="false" x="70" y="15" width="175" height="13" uuid="b51a4961-06bb-4fcc-9a09-3d4219858b73"/>
 				<textElement textAlignment="Left"/>
-				<textFieldExpression><![CDATA[${wrapper}.getUserBankAccountNumber()]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{wrapper}.getUserBankAccountNumber()]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="INVOICE_TX_08" isPrintRepeatedValues="false" x="70" y="28" width="175" height="13" uuid="5e126b95-59ac-4966-845e-9f52c5be5b60"/>
 				<textElement textAlignment="Left"/>
-				<textFieldExpression><![CDATA[${wrapper}.getUserBankCode()]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{wrapper}.getUserBankCode()]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
 				<reportElement style="INVOICE_TX_08" isPrintRepeatedValues="false" x="70" y="41" width="175" height="13" uuid="83327585-1e25-4737-a343-1b14e6b87cf5"/>
 				<textElement textAlignment="Left"/>
-				<textFieldExpression><![CDATA[${wrapper}.getUserBankBIC()]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{wrapper}.getUserBankBIC()]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
 				<reportElement style="INVOICE_TX_08" isPrintRepeatedValues="false" x="70" y="54" width="175" height="13" uuid="4a3935d3-f2db-4e54-ae39-0ce025e6fdb4"/>
 				<textElement textAlignment="Left"/>
-				<textFieldExpression><![CDATA[${wrapper}.getUserBankIBAN()]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{wrapper}.getUserBankIBAN()]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="INVOICE_TX_08" isPrintRepeatedValues="false" x="281" y="2" width="178" height="13" uuid="b113a6cf-79d7-447a-abc9-1eff4c62d799"/>
 				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA[${wrapper}.getUserName()]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{wrapper}.getUserName()]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="INVOICE_TX_08" isPrintRepeatedValues="false" x="281" y="15" width="178" height="13" uuid="ee186db2-b74e-456d-94fc-a2125ff647de"/>
 				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA[${wrapper}.getUserStreet()]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{wrapper}.getUserStreet()]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="INVOICE_TX_08" isPrintRepeatedValues="false" x="281" y="28" width="178" height="13" uuid="118e5c57-f95f-4cb4-9a50-2ca48a501516"/>
 				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA[${wrapper}.getUserPostcodeAndCity()]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{wrapper}.getUserPostcodeAndCity()]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
 				<reportElement style="INVOICE_TX_08" isPrintRepeatedValues="false" x="281" y="41" width="178" height="13" isRemoveLineWhenBlank="true" uuid="9dbad37a-df32-4a1c-8bed-2a1fa3a265a6"/>
 				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA[${wrapper}.getUserPhone()]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{wrapper}.getUserPhone()]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
 				<reportElement style="INVOICE_TX_08" isPrintRepeatedValues="false" x="281" y="54" width="178" height="13" isRemoveLineWhenBlank="true" uuid="8a8269f6-3bfa-4664-91c0-f8e7c9abad5c"/>
 				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA[${wrapper}.getUserMobile()]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{wrapper}.getUserMobile()]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
 				<reportElement style="INVOICE_TX_08" isPrintRepeatedValues="false" x="281" y="67" width="178" height="13" isRemoveLineWhenBlank="true" uuid="166144f7-a9ac-4d90-91c4-1c8f15e7b417"/>
 				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA[${wrapper}.getUserEmail()]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{wrapper}.getUserEmail()]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement style="INVOICE_TX_08" isPrintRepeatedValues="false" x="281" y="89" width="178" height="13" isRemoveLineWhenBlank="true" uuid="4b80a054-f1fe-47ca-8ad4-b49a82b993f8"/>
 				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA[${wrapper}.getUserTaxNumberFormatted()]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{wrapper}.getUserTaxNumberFormatted()]]></textFieldExpression>
 			</textField>
 		</band>
 	</pageFooter>
