Invoice generation now generic removed obsolete generator, data source and wrapper classes

--- a/accounting-reporting/src/InvoicePositionTemplate.jrxml
+++ b/accounting-reporting/src/InvoicePositionTemplate.jrxml
@@ -1,29 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="subreport_invoice_positions" pageWidth="459" pageHeight="200" columnWidth="459" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="InvoicePositionTemplate" pageWidth="459" pageHeight="200" columnWidth="459" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="58609b31-2495-480a-8798-00914b73e624">
 	<property name="ireport.callouts" value="##Mon Aug 23 13:32:06 CEST 2010"/>
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<template><![CDATA["AccountingStyleSheet.jrtx"]]></template>
+	<parameter name="wrapper" class="de.togginho.accounting.reporting.internal.ModelWrapper"/>
 	<queryString language="xPath">
 		<![CDATA[]]>
 	</queryString>
-	<field name="quantity" class="java.lang.String">
-		<fieldDescription><![CDATA[quantity]]></fieldDescription>
+	<field name="wrapper" class="de.togginho.accounting.reporting.internal.ModelWrapper">
+		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="unit" class="java.lang.String">
-		<fieldDescription><![CDATA[unit]]></fieldDescription>
-	</field>
-	<field name="description" class="java.lang.String">
-		<fieldDescription><![CDATA[description]]></fieldDescription>
-	</field>
-	<field name="pricePerUnit" class="java.lang.String">
-		<fieldDescription><![CDATA[pricePerUnit]]></fieldDescription>
-	</field>
-	<field name="totalPriceNet" class="java.lang.String">
-		<fieldDescription><![CDATA[totalPriceNet]]></fieldDescription>
-	</field>
-	<field name="taxRate" class="java.lang.String"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
@@ -41,49 +29,50 @@
 	<detail>
 		<band height="30" splitType="Stretch">
 			<elementGroup>
+                <textField isStretchWithOverflow="true">
+                    <reportElement style="INVOICE_TX_10" positionType="Float" x="0" y="0" width="55" height="30" isPrintWhenDetailOverflows="true" uuid="e35fe70b-4849-40fa-88f2-743a69803448"/>
+                    <textElement textAlignment="Left">
+                        <font size="9"/>
+                    </textElement>
+                    <textFieldExpression><![CDATA[$F{wrapper}.get("quantity")]]></textFieldExpression>
+                </textField>
+                <textField isStretchWithOverflow="true" pattern="">
+                    <reportElement style="INVOICE_TX_10" positionType="Float" x="55" y="0" width="55" height="30" isPrintWhenDetailOverflows="true" uuid="544778a5-54ad-430f-b847-517b65846714"/>
+                    <textElement>
+                        <font size="9"/>
+                    </textElement>
+                    <textFieldExpression><![CDATA[$F{wrapper}.get("unit")]]></textFieldExpression>
+                </textField>
+                <textField isStretchWithOverflow="true">
+                    <reportElement style="INVOICE_TX_10" positionType="Float" x="110" y="0" width="149" height="30" isPrintWhenDetailOverflows="true" uuid="46548676-8c7c-48c3-b184-55d9a1de8ff4"/>
+                    <textElement>
+                        <font size="9"/>
+                    </textElement>
+                    <textFieldExpression><![CDATA[$F{wrapper}.get("description")]]></textFieldExpression>
+                </textField>
+                <textField isStretchWithOverflow="true" pattern="">
+                    <reportElement style="INVOICE_TX_10" positionType="Float" x="259" y="0" width="75" height="30" isPrintWhenDetailOverflows="true" uuid="4faf3250-3765-4199-acc7-53ff4dc7afe1"/>
+                    <textElement textAlignment="Right">
+                        <font size="9"/>
+                    </textElement>
+                    <textFieldExpression><![CDATA[$F{wrapper}.formatAsCurrency("pricePerUnit")]]></textFieldExpression>
+                </textField>
 				<textField isStretchWithOverflow="true" pattern="">
-					<reportElement style="INVOICE_TX_10" positionType="Float" x="334" y="0" width="75" height="30" isPrintWhenDetailOverflows="true"/>
+					<reportElement style="INVOICE_TX_10" positionType="Float" x="334" y="0" width="75" height="30" isPrintWhenDetailOverflows="true" uuid="7eb92815-60c8-4af2-88d9-89b3a124eae1"/>
 					<textElement textAlignment="Right">
 						<font size="9"/>
 					</textElement>
-					<textFieldExpression class="java.lang.String"><![CDATA[$F{totalPriceNet}]]></textFieldExpression>
+					<textFieldExpression><![CDATA[$F{wrapper}.formatAsCurrency("CALCULATED_TOTAL.net")]]></textFieldExpression>
 				</textField>
-				<textField isStretchWithOverflow="true" pattern="">
-					<reportElement style="INVOICE_TX_10" positionType="Float" x="55" y="0" width="55" height="30" isPrintWhenDetailOverflows="true"/>
-					<textElement>
-						<font size="9"/>
-					</textElement>
-					<textFieldExpression class="java.lang.String"><![CDATA[$F{unit}]]></textFieldExpression>
-				</textField>
-				<textField isStretchWithOverflow="true">
-					<reportElement style="INVOICE_TX_10" positionType="Float" x="0" y="0" width="55" height="30" isPrintWhenDetailOverflows="true"/>
-					<textElement textAlignment="Left">
-						<font size="9"/>
-					</textElement>
-					<textFieldExpression class="java.lang.String"><![CDATA[$F{quantity}]]></textFieldExpression>
-				</textField>
-				<textField isStretchWithOverflow="true" pattern="">
-					<reportElement style="INVOICE_TX_10" positionType="Float" x="259" y="0" width="75" height="30" isPrintWhenDetailOverflows="true"/>
-					<textElement textAlignment="Right">
-						<font size="9"/>
-					</textElement>
-					<textFieldExpression class="java.lang.String"><![CDATA[$F{pricePerUnit}]]></textFieldExpression>
-				</textField>
-				<textField isStretchWithOverflow="true">
-					<reportElement style="INVOICE_TX_10" positionType="Float" x="110" y="0" width="149" height="30" isPrintWhenDetailOverflows="true"/>
-					<textElement>
-						<font size="9"/>
-					</textElement>
-					<textFieldExpression class="java.lang.String"><![CDATA[$F{description}]]></textFieldExpression>
-				</textField>
+            <textField isStretchWithOverflow="true" pattern="" isBlankWhenNull="true">
+                <reportElement style="INVOICE_TX_10" positionType="Float" x="409" y="0" width="50" height="30" isPrintWhenDetailOverflows="true" uuid="0b5b8f0d-a1e2-4eb1-8c4a-0c44cf26846d"/>
+                <textElement textAlignment="Center">
+                    <font size="9"/>
+                </textElement>
+                <textFieldExpression><![CDATA[$F{wrapper}.get("taxRate", "-")]]></textFieldExpression>
+            </textField>
 			</elementGroup>
-			<textField isStretchWithOverflow="true" pattern="" isBlankWhenNull="true">
-				<reportElement style="INVOICE_TX_10" positionType="Float" x="409" y="0" width="50" height="30" isPrintWhenDetailOverflows="true"/>
-				<textElement textAlignment="Center">
-					<font size="9"/>
-				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{taxRate}]]></textFieldExpression>
-			</textField>
+
 		</band>
 	</detail>
 	<columnFooter>
