--- a/accounting-reporting/src/RevenueTemplate.jrxml
+++ b/accounting-reporting/src/RevenueTemplate.jrxml
@@ -4,57 +4,31 @@
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<template><![CDATA["AccountingStyleSheet.jrtx"]]></template>
-	<field name="revenue" class="de.togginho.accounting.reporting.model.RevenueWrapper"/>
-	<field name="revenue.title" class="java.lang.String"/>
-	<field name="from.title" class="java.lang.String"/>
-	<field name="until.title" class="java.lang.String"/>
-	<field name="invoice.date.title" class="java.lang.String"/>
-	<field name="invoice.no.title" class="java.lang.String"/>
-	<field name="payment.date.title" class="java.lang.String"/>
-	<field name="net.price.title" class="java.lang.String"/>
-	<field name="taxRate.title" class="java.lang.String"/>
-	<field name="tax.amount.title" class="java.lang.String"/>
-	<field name="gross.price.title" class="java.lang.String"/>
-	<field name="sum.title" class="java.lang.String"/>
-	<field name="client.name.title" class="java.lang.String"/>
+	<parameter name="wrapper" class="de.togginho.accounting.reporting.internal.ModelWrapper" isForPrompting="false"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
 	<pageHeader>
 		<band height="58" splitType="Stretch">
 			<textField>
-				<reportElement uuid="698d58cb-c96f-4e92-9576-97b460e98182" style="INVOICE_TX_10" x="0" y="37" width="40" height="20"/>
-				<textElement/>
-				<textFieldExpression><![CDATA[$F{from.title}]]></textFieldExpression>
+				<reportElement style="INVOICE_TX_18B" x="0" y="0" width="183" height="32" uuid="184a4a46-755d-45b4-b33c-ebf83fc63a57"/>
+				<textFieldExpression><![CDATA[$P{wrapper}.getMessage("RevenueReportGenerator_revenueTitle")]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="ce7b6373-4733-4c45-b95c-758a3ca2b471" style="INVOICE_TX_10" x="45" y="37" width="70" height="20"/>
-				<textElement/>
-				<textFieldExpression><![CDATA[$F{revenue}.getFromDate()]]></textFieldExpression>
+				<reportElement style="INVOICE_TX_10" x="0" y="37" width="100" height="20" uuid="698d58cb-c96f-4e92-9576-97b460e98182"/>
+				<textFieldExpression><![CDATA[$P{wrapper}.bindAsDate("from", "timeFrame.from")]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="3b3f4d9d-8370-4310-af5f-9a5e4a7fc68a" style="INVOICE_TX_10" x="120" y="37" width="40" height="20"/>
-				<textElement/>
-				<textFieldExpression><![CDATA[$F{until.title}]]></textFieldExpression>
+				<reportElement style="INVOICE_TX_10" x="100" y="37" width="100" height="20" uuid="ce7b6373-4733-4c45-b95c-758a3ca2b471"/>
+				<textFieldExpression><![CDATA[$P{wrapper}.bindAsDate("until", "timeFrame.until")]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="cbb81060-28a1-4927-bd40-3d8bb71a7c9f" style="INVOICE_TX_10" x="165" y="37" width="70" height="20"/>
-				<textElement/>
-				<textFieldExpression><![CDATA[$F{revenue}.getUntilDate()]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement uuid="184a4a46-755d-45b4-b33c-ebf83fc63a57" style="INVOICE_TX_18B" x="0" y="0" width="183" height="32"/>
-				<textElement/>
-				<textFieldExpression><![CDATA[$F{revenue.title}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement uuid="b1472643-16d1-4b70-a618-d02a76b17d95" style="INVOICE_TX_08" x="737" y="0" width="15" height="20"/>
+				<reportElement style="INVOICE_TX_08" x="737" y="0" width="15" height="20" uuid="b1472643-16d1-4b70-a618-d02a76b17d95"/>
 				<textElement textAlignment="Right"/>
 				<textFieldExpression><![CDATA[$V{PAGE_NUMBER} + "/"]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement uuid="b1472643-16d1-4b70-a618-d02a76b17d95" style="INVOICE_TX_08" x="752" y="0" width="10" height="20"/>
-				<textElement/>
+				<reportElement style="INVOICE_TX_08" x="752" y="0" width="10" height="20" uuid="b1472643-16d1-4b70-a618-d02a76b17d95"/>
 				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 		</band>
@@ -62,58 +36,53 @@
 	<columnHeader>
 		<band height="25" splitType="Stretch">
 			<line>
-				<reportElement uuid="5315e224-ca09-4e88-9f98-49a6f78b6f6d" x="0" y="0" width="762" height="1"/>
+				<reportElement x="0" y="0" width="762" height="1" uuid="5315e224-ca09-4e88-9f98-49a6f78b6f6d"/>
 			</line>
 			<textField>
-				<reportElement uuid="b4c5b5e8-87dd-4d94-b240-8307e9b5ce43" style="INVOICE_TX_10B" x="0" y="2" width="100" height="20"/>
+				<reportElement style="INVOICE_TX_10B" x="0" y="2" width="100" height="20" uuid="b4c5b5e8-87dd-4d94-b240-8307e9b5ce43"/>
 				<textElement verticalAlignment="Middle"/>
-				<textFieldExpression><![CDATA[$F{invoice.no.title}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{wrapper}.getMessage("RevenueReportGenerator_invoiceNumberTitle")]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="b95549fe-780e-4078-a32d-ce5039ad3590" style="INVOICE_TX_10B" x="100" y="2" width="100" height="20"/>
+				<reportElement style="INVOICE_TX_10B" x="100" y="2" width="100" height="20" uuid="b95549fe-780e-4078-a32d-ce5039ad3590"/>
 				<textElement verticalAlignment="Middle"/>
-				<textFieldExpression><![CDATA[$F{invoice.date.title}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{wrapper}.getMessage("RevenueReportGenerator_invoiceDate")]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="af7d9599-74b6-4ed5-8944-0535a9685a51" style="INVOICE_TX_10B" x="200" y="2" width="125" height="20"/>
+				<reportElement style="INVOICE_TX_10B" x="200" y="2" width="100" height="20" uuid="81d7909b-135b-4bb6-ae84-9e9b51cb46a9"/>
 				<textElement verticalAlignment="Middle"/>
-				<textFieldExpression><![CDATA[$F{client.name.title}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{wrapper}.getMessage("RevenueReportGenerator_paymentDateTitle")]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="81d7909b-135b-4bb6-ae84-9e9b51cb46a9" style="INVOICE_TX_10B" x="325" y="2" width="100" height="20"/>
+				<reportElement style="INVOICE_TX_10B" x="300" y="2" width="160" height="20" uuid="af7d9599-74b6-4ed5-8944-0535a9685a51"/>
 				<textElement verticalAlignment="Middle"/>
-				<textFieldExpression><![CDATA[$F{payment.date.title}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{wrapper}.getMessage("RevenueReportGenerator_clientTitle")]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="ced88f4a-4a54-482e-a20e-2560a65ffe17" style="INVOICE_TX_10B" x="425" y="2" width="100" height="20"/>
+				<reportElement style="INVOICE_TX_10B" x="460" y="2" width="100" height="20" uuid="ced88f4a-4a54-482e-a20e-2560a65ffe17"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
-				<textFieldExpression><![CDATA[$F{net.price.title}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{wrapper}.getMessage("netPriceTitle")]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="45b87610-d461-4b1e-ba79-faef755cc642" style="INVOICE_TX_10B" x="525" y="2" width="35" height="20"/>
+				<reportElement style="INVOICE_TX_10B" x="560" y="2" width="100" height="20" uuid="52e1b0e7-289c-417d-b594-2dadfad88bdc"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
-				<textFieldExpression><![CDATA[$F{taxRate.title}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{wrapper}.getMessage("taxAmountTitle")]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="52e1b0e7-289c-417d-b594-2dadfad88bdc" style="INVOICE_TX_10B" x="560" y="2" width="100" height="20"/>
+				<reportElement style="INVOICE_TX_10B" x="660" y="2" width="100" height="20" uuid="9603ea41-20db-4a14-8925-6eeedb370517"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
-				<textFieldExpression><![CDATA[$F{tax.amount.title}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement uuid="9603ea41-20db-4a14-8925-6eeedb370517" style="INVOICE_TX_10B" x="660" y="2" width="100" height="20"/>
-				<textElement textAlignment="Right" verticalAlignment="Middle"/>
-				<textFieldExpression><![CDATA[$F{gross.price.title}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{wrapper}.getMessage("grossPriceTitle")]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement uuid="6ee3836d-5329-4779-8ddb-1acf6b5dccd9" x="0" y="24" width="762" height="1"/>
+				<reportElement x="0" y="24" width="762" height="1" uuid="6ee3836d-5329-4779-8ddb-1acf6b5dccd9"/>
 			</line>
 		</band>
 	</columnHeader>
 	<detail>
 		<band height="20" splitType="Stretch">
 			<subreport>
-				<reportElement uuid="bbf265a6-a19a-455a-a412-929243d74c98" x="0" y="0" width="762" height="20"/>
-				<dataSourceExpression><![CDATA[$P{REPORT_PARAMETERS_MAP}.get( "REVENUE_DETAILS_DATASOURCE" )]]></dataSourceExpression>
+				<reportElement x="0" y="0" width="762" height="20" uuid="bbf265a6-a19a-455a-a412-929243d74c98"/>
+				<dataSourceExpression><![CDATA[$P{wrapper}.getAsDataSource("invoices")]]></dataSourceExpression>
 				<subreportExpression><![CDATA["RevenueDetailsSubreport.jasper"]]></subreportExpression>
 			</subreport>
 		</band>
@@ -121,27 +90,26 @@
 	<summary>
 		<band height="40" splitType="Stretch">
 			<line>
-				<reportElement uuid="42650008-e804-43a8-b388-c1a69399d65c" x="0" y="0" width="762" height="1"/>
+				<reportElement x="0" y="0" width="762" height="1" uuid="42650008-e804-43a8-b388-c1a69399d65c"/>
 			</line>
 			<textField>
-				<reportElement uuid="f7bb201c-8a84-49f7-82ce-b39961a7c1d3" style="INVOICE_TX_12B" x="660" y="1" width="100" height="20"/>
-				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA[$F{revenue}.getTotalGross()]]></textFieldExpression>
+				<reportElement style="INVOICE_TX_12B" x="360" y="1" width="100" height="20" uuid="8c5fec70-7727-4319-a11d-29fadff9ca90"/>
+				<textFieldExpression><![CDATA[$P{wrapper}.getMessage("sumTitle")]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="348ce713-d5cc-4f15-b903-cedd7aa2dac7" style="INVOICE_TX_12B" x="560" y="1" width="100" height="20"/>
+				<reportElement style="INVOICE_TX_12B" x="460" y="1" width="100" height="20" uuid="2f8beab8-2fe7-488f-8354-a6e4207cb901"/>
 				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA[$F{revenue}.getTotalTaxAmount()]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{wrapper}.formatAsCurrency("revenueNet")]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="2f8beab8-2fe7-488f-8354-a6e4207cb901" style="INVOICE_TX_12B" x="425" y="1" width="100" height="20"/>
+				<reportElement style="INVOICE_TX_12B" x="560" y="1" width="100" height="20" uuid="348ce713-d5cc-4f15-b903-cedd7aa2dac7"/>
 				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA[$F{revenue}.getTotalNet()]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{wrapper}.formatAsCurrency("revenueTax")]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement uuid="8c5fec70-7727-4319-a11d-29fadff9ca90" style="INVOICE_TX_12B" x="320" y="1" width="100" height="20"/>
-				<textElement/>
-				<textFieldExpression><![CDATA[$F{sum.title}]]></textFieldExpression>
+				<reportElement style="INVOICE_TX_12B" x="660" y="1" width="100" height="20" uuid="f7bb201c-8a84-49f7-82ce-b39961a7c1d3"/>
+				<textElement textAlignment="Right"/>
+				<textFieldExpression><![CDATA[$P{wrapper}.formatAsCurrency("revenueGross")]]></textFieldExpression>
 			</textField>
 		</band>
 	</summary>
