--- a/accounting-reporting/src/ExpenseDetailsSubreport.jrxml
+++ b/accounting-reporting/src/ExpenseDetailsSubreport.jrxml
@@ -4,61 +4,45 @@
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<template><![CDATA["AccountingStyleSheet.jrtx"]]></template>
-	<field name="paymentDate" class="java.lang.String">
-		<fieldDescription><![CDATA[paymentDate]]></fieldDescription>
-	</field>
-	<field name="expenseDescription" class="java.lang.String">
-		<fieldDescription><![CDATA[expenseDescription]]></fieldDescription>
-	</field>
-	<field name="expenseCategory" class="java.lang.String"/>
-	<field name="netPrice" class="java.lang.String">
-		<fieldDescription><![CDATA[netPrice]]></fieldDescription>
-	</field>
-	<field name="taxRate" class="java.lang.String">
-		<fieldDescription><![CDATA[taxRate]]></fieldDescription>
-	</field>
-	<field name="taxAmount" class="java.lang.String">
-		<fieldDescription><![CDATA[taxAmount]]></fieldDescription>
-	</field>
-	<field name="grossPrice" class="java.lang.String">
-		<fieldDescription><![CDATA[grossPrice]]></fieldDescription>
+	<field name="wrapper" class="de.togginho.accounting.reporting.internal.ModelWrapper">
+		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
 	<detail>
 		<band height="20" splitType="Stretch">
 			<textField>
 				<reportElement uuid="df68c526-a9f2-49c7-828f-3a85c1bd74c5" style="INVOICE_TX_10" x="0" y="0" width="100" height="20"/>
 				<textElement/>
-				<textFieldExpression><![CDATA[$F{paymentDate}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{wrapper}.formatAsDate("paymentDate")]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement uuid="4c9c542a-7768-40b6-90b6-281805b730c5" style="INVOICE_TX_10" x="100" y="0" width="215" height="20"/>
 				<textElement/>
-				<textFieldExpression><![CDATA[$F{expenseDescription}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{wrapper}.get("description")]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
 				<reportElement uuid="4c9c542a-7768-40b6-90b6-281805b730c5" style="INVOICE_TX_10" x="315" y="0" width="110" height="20"/>
 				<textElement/>
-				<textFieldExpression><![CDATA[$F{expenseCategory}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{wrapper}.get("category")]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement uuid="62e7fb97-5a2e-4f29-9565-f447029913e8" style="INVOICE_TX_10" x="425" y="0" width="100" height="20"/>
 				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA[$F{netPrice}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{wrapper}.formatAsCurrency("netAmount")]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement uuid="e9f4a598-eb1c-41e1-a1a7-a8615d853d44" style="INVOICE_TX_10" x="525" y="0" width="35" height="20"/>
 				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA[$F{taxRate}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{wrapper}.formatAsPercentage("taxRate.rate", "-")]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement uuid="65ca6b1a-f10d-4fc0-af7c-cdca8a161409" style="INVOICE_TX_10" x="560" y="0" width="100" height="20"/>
 				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA[$F{taxAmount}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{wrapper}.formatAsCurrency("CALCULATED_TOTAL.tax")]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement uuid="832f0428-f50c-4694-813d-eaa09b8b8694" style="INVOICE_TX_10" x="660" y="0" width="100" height="20"/>
 				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA[$F{grossPrice}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{wrapper}.formatAsCurrency("CALCULATED_TOTAL.gross")]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
